crates/uitest/fixtures/ty_check/const_hole_value_position.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/const_hole_value_position.fe
---
error[3-0032]: type with inferred const generic parameter `_` can not be used here
   ┌─ const_hole_value_position.fe:11:20
   │
 1 │ struct Slot<T, const ROOT: u256 = _> {}
   │        ---- `Slot` is defined here
   ·
11 │ fn bad_return() -> Slot<u256> {
   │                    ^^^^^^^^^^ this type contains an inferred const (`_`)
   │
   = specify an explicit const generic argument

error[3-0032]: type with inferred const generic parameter `_` can not be used here
   ┌─ const_hole_value_position.fe:16:12
   │
 1 │ struct Slot<T, const ROOT: u256 = _> {}
   │        ---- `Slot` is defined here
   ·
16 │     let x: Slot<u256>
   │            ^^^^^^^^^^ this type contains an inferred const (`_`)
   │
   = specify an explicit const generic argument
